tdf#93751 - ensure textures are unbound from framebuffers post destroy.

Change-Id: I81aec0e6f8db57905826c54c3442528be6068700
Reviewed-on: https://gerrit.libreoffice.org/18184
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Jan Holesovsky <kendy@collabora.com>